<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.alfresco.tas</groupId>
	<artifactId>utility</artifactId>
	<name>alfresco-tas-utility</name>
	<version>2.0.0-SNAPSHOT</version>
	<organization>
        <name>Alfresco Software</name>
        <url>http://www.alfresco.com/</url>
    </organization>
    <developers>
        <developer>
            <name>Paul Brodner</name>
            <roles>
                <role>Test Automation Architect</role>
            </roles>
        </developer>
    </developers>	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.sourceVersion>1.8</maven.build.sourceVersion>
		<maven-release.version>2.5.3</maven-release.version>
		<spring.version>4.3.11.RELEASE</spring.version>
		<suiteXmlFile>src/test/resources/unit-test.xml</suiteXmlFile>
		<testNG.version>6.9.10</testNG.version>
		<dataPrep.version>2.0-SNAPSHOT</dataPrep.version>
		<slf4j.version>1.7.2</slf4j.version>
		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
		<maven-remote-resources.version>1.5</maven-remote-resources.version>
		<extentreports.version>2.41.2</extentreports.version>
		<google.guava.version>23.0</google.guava.version>
		<jackson-databind.version>2.4.4</jackson-databind.version>
		<org.jvnet.version>0.6.5</org.jvnet.version>
		<javax.mail.version>1.6.2</javax.mail.version>
		<seleniumjava.version>3.7.1</seleniumjava.version>
		<yandex.qatools.version>1.18</yandex.qatools.version>
		<java.version>10</java.version>
	</properties>

	<scm>
		<connection>scm:git:https://git.alfresco.com/tas/alfresco-tas-utility.git</connection>
		<developerConnection>scm:git:https://git.alfresco.com/tas/alfresco-tas-utility.git</developerConnection>
		<url>https://git.alfresco.com/tas/alfresco-tas-utility</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>JIRA</system>
		<url>https://issues.alfresco.com/jira/browse/</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>alfresco-internal-snapshots</id>
			<url>https://nexus.alfresco.com/nexus/content/repositories/internal-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>alfresco-internal</id>
			<url>https://nexus.alfresco.com/nexus/content/repositories/internal-releases/</url>
		</repository>
	</distributionManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-remote-resources-plugin</artifactId>
					<version>${maven-remote-resources.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release.version}</version>
					<configuration>					
						<tagNameFormat>v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
                    <target>${java.version}</target>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.1</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<skipTests>true</skipTests>
					<suiteXmlFiles>
						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-remote-resources-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>bundle</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includes>
						<include>shared-resources/**/*</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>shared-resources/**/*</include>
				</includes>
			</resource>
		</resources>
	
	</build>
	<dependencies>
		<!--Guava is a suite of core and expanded libraries that include utility 
			classes, google's collections, io classes, and much much more -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${google.guava.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- DATA PREPARATION -->
		<dependency>
			<groupId>org.alfresco.test</groupId>
			<artifactId>dataprep</artifactId>
			<version>${dataPrep.version}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testNG.version}</version>
		</dependency>

		<!-- default logger -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- custom report -->
		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extentreports.version}</version>
		</dependency>

		<!-- @JsonProperty -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind.version}</version>
		</dependency>

		<!-- JAXB in java 8, removed in java 11-->
		<!-- http://openjdk.java.net/jeps/320#Java-EE-modules -->
		<dependency>
			<groupId>org.jvnet.jaxb2_commons</groupId>
			<artifactId>jaxb2-basics</artifactId>
			<version>${org.jvnet.version}</version>
		</dependency>
		
		<!-- JAXB to fix javax in Java11-->
		<dependency>
		  <groupId>javax.xml.bind</groupId>
		  <artifactId>jaxb-api</artifactId>
		  <version>2.3.0</version>
		</dependency>
		<dependency>
		  <groupId>com.sun.xml.bind</groupId>
		  <artifactId>jaxb-core</artifactId>
		  <version>2.3.0</version>
		</dependency>
		<dependency>
		  <groupId>com.sun.xml.bind</groupId>
		  <artifactId>jaxb-impl</artifactId>
		  <version>2.3.0</version>
		</dependency>
		<dependency>
		  <groupId>javax.annotation</groupId>
		  <artifactId>javax.annotation-api</artifactId>
		  <version>1.3.2</version>
		</dependency>

		<!-- Jolokia used for interacting with JMX though proxy -->
		<dependency>
			<groupId>org.jolokia</groupId>
			<artifactId>jolokia-client-java</artifactId>
			<version>1.3.4</version>
		</dependency>

		<!-- Jolokia dependency -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.4.1</version>
		</dependency>

		<!-- Postgres Driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>9.4.1211.jre7</version>
		</dependency>

		<!-- MySql Driver -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.18</version>
		</dependency>

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>${javax.mail.version}</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>${javax.mail.version}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${seleniumjava.version}</version>
		</dependency>

		<!-- yandex -->
		<dependency>
			<groupId>ru.yandex.qatools.htmlelements</groupId>
			<artifactId>htmlelements-java</artifactId>
			<version>${yandex.qatools.version}</version>
		</dependency>
	</dependencies>
</project>
